syntax = "proto3";

package singer;

service SingerService {
    rpc CreateSinger(CreateSingerDto) returns (Singer){}
    rpc FindAll(FindAllDto) returns (Singers){}
    rpc FindById(FindByIdDto) returns (Singer){}
    rpc UpdateSinger(UpdateSingerDto) returns (Singer){}
    rpc DeleteSinger(FindByIdDto) returns (Empty){}
}

message Empty{}

message Singer{
    string id = 1;
    string name = 2;
    int64 createdAt = 3;
}
message FindByIdDto{
    string id = 1;
}
message FindAllDto{
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string order = 3;
}

message CreateSingerDto{
    string name = 1;
}

message UpdateSingerDto{
    string id = 1;
    string name = 2;
}


message Singers{
    int32 totalItems = 1;
    int32 totalPages = 2;
    int32 currentPage = 3;
    repeated Singer data = 4;
}
